# Blunder

./: CMakeLists.txt  README.md
assignments/Blunder/: CMakeLists.txt  main.cpp
assignments/Blunder/assets/: Lighting.glsl  fragment.glsl  vertex.glsl
assignments/Blunder/assets/UI Shader/: UIfragment.glsl  UIvertex.glsl
assignments/Blunder/assets/fonts/: textVertex.glsl
assignments/TextRendering/: CMakeLists.txt  main.cpp
assignments/TextRendering/assets/: Lighting.glsl
assignments/TextRendering/assets/Bitmap/: LatoRegularBitmap.fnt
core/: CMakeLists.txt
core/Blunder/: Color.h  Keystroke.h  Time.h
core/Blunder/ObjectRender/: ObjectRender.cpp  ObjectRender.h
core/Blunder/ObjectSystem/: HierarchyElement.cpp  HierarchyElement.h  ObjectRender.cpp  ObjectRender.h  ObjectSystem.cpp  ObjectSystem.h
core/Blunder/ObjectSystem/Elements/: Folder.cpp  Folder.h  HierarchyElement.cpp  HierarchyElement.h
core/Blunder/StateMachine/: StateMachine.cpp  StateMachine.h
core/Blunder/UI/: TextInput.cpp  TextInput.h  UIElements.cpp  UIElements.h  UIRenderer.cpp  UIRenderer.h  UIWindows.cpp  UIWindows.h
core/Camera/: camera.h
core/Font/: font.cpp  font.h
core/line/: line.cpp  line.h
core/math/: smath.h
core/object/: mesh.cpp  mesh.h  object.h
core/shader/: material.h  shader.cpp  shader.h
